--- a/work/02-basic-layout/homepage.html
+++ b/work/02-basic-layout/homepage.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" href="./assets/homepage.css"/>
   </head>
   <body>
     <div id="homepage">
