--- a/project1/public/index.html
+++ b/project1/public/index.html
@@ -4,33 +4,155 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <link rel="stylesheet" href="./assets/index.css"/>
 </head>
 <body>
     <div id="homepage">
         <header>        
-          <nav class="primary-nav">
-            <ul class="menu">
-              <li><a href="about.html">About</a></li>
-              <li><a href="famous.html">Famous Cats</a></li>
-              <li><a href="lolcats.html">LOLCats</a></li>
-            </ul>
-          </nav>
+          <nav class="nav">
+          <div class="navbar">
+            <div class="subnav">
+                <a href="index.html">
+                    <img id="logo" src="nsc/logo2.png" alt="My Dino Logo" />
+                </a>
+            </div>
+            <div class="subnav">
+              <button class="subnavbtn">Menu <i class="fa fa-caret-down"></i></button>
+              <div class="subnav-content">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="register.html">Register</a>
+              </div>
+            </div>
+            <div class="subnav">
+              <button class="subnavbtn">External Links <i class="fa fa-caret-down"></i></button>
+              <div class="subnav-content">
+                <a href="www.google.com">Google</a>
+                <a href="www.wikipedia.com">Wikipedia</a>
+                <a href="www.amazon.com">Amazon</a>
+              </div>
+            </div>
+          </div>
         </header>
-        <nav class="local-menu">
-          <ul>
-            <li><a href="stuff.html">Stuff</a></li>
-            <li><a href="other.html">Other stuff</a></li>
-            <li><a href="clickbait.html">Stuff that will really surprise you!</a></li>
-          </ul>
-        </nav>
-        <main>
-          <p>Stretch out on bed claw drapes. Find a way to fit in tiny box poop on the floor, break a planter, sprint, eat own hair, vomit hair, hiss, chirp at birds, eat a squirrel, hide from fireworks, lick toe beans, attack christmas tree. I hate cucumber pls dont throw it at me white cat sleeps on a black shirt. Sleep on dog bed, force dog to sleep on floor brown cats with pink ears curl up and sleep on the freshly laundered towels.</p>
-          <p>Find a way to fit in tiny box. Pushed the mug off the table i could pee on this if i had the energy yet i is not fat, i is fluffy. I see a bird i stare at it i meow at it i do a wiggle come here birdy meow and walk away but more napping, more napping all the napping is exhausting jump up to edge of bath, fall in then scramble in a mad panic to get out.</p>
-          <p>Swipe at owner's legs cat dog hate mouse eat string barf pillow no baths hate everything. Cough hairball, eat toilet paper where is it? i saw that bird i need to bring it home to mommy squirrel! fall over dead (not really but gets sypathy) or wack the mini furry mouse. Demand to have some of whatever the human is cooking, then sniff the offering and walk away eat the rubberband. That box? i can fit in that box.</p>
-        </main>
+
+        <div class="row">
+            <div class="col-3">
+                <div class="card">
+                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                    <h1>John Doe</h1>
+                    <p class="title">CEO & Founder, Example</p>
+                    <p>Harvard University</p>
+                    <div style="margin: 24px 0;">
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a>  
+                        <a href="#"><i class="fa fa-linkedin"></i></a>  
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                    </div>
+                    <p><button>Contact</button></p>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card">
+                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                    <h1>John Doe</h1>
+                    <p class="title">CEO & Founder, Example</p>
+                    <p>Harvard University</p>
+                    <div style="margin: 24px 0;">
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a>  
+                        <a href="#"><i class="fa fa-linkedin"></i></a>  
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                    </div>
+                    <p><button>Contact</button></p>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card">
+                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                    <h1>John Doe</h1>
+                    <p class="title">CEO & Founder, Example</p>
+                    <p>Harvard University</p>
+                    <div style="margin: 24px 0;">
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a>  
+                        <a href="#"><i class="fa fa-linkedin"></i></a>  
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                    </div>
+                    <p><button>Contact</button></p>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card">
+                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                    <h1>John Doe</h1>
+                    <p class="title">CEO & Founder, Example</p>
+                    <p>Harvard University</p>
+                    <div style="margin: 24px 0;">
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a>  
+                        <a href="#"><i class="fa fa-linkedin"></i></a>  
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                    </div>
+                    <p><button>Contact</button></p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-4">
+                <div class="card">
+                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                    <h1>John Doe</h1>
+                    <p class="title">CEO & Founder, Example</p>
+                    <p>Harvard University</p>
+                    <div style="margin: 24px 0;">
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a>  
+                        <a href="#"><i class="fa fa-linkedin"></i></a>  
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                    </div>
+                    <p><button>Contact</button></p>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                    <h1>John Doe</h1>
+                    <p class="title">CEO & Founder, Example</p>
+                    <p>Harvard University</p>
+                    <div style="margin: 24px 0;">
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a>  
+                        <a href="#"><i class="fa fa-linkedin"></i></a>  
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                    </div>
+                    <p><button>Contact</button></p>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                    <h1>John Doe</h1>
+                    <p class="title">CEO & Founder, Example</p>
+                    <p>Harvard University</p>
+                    <div style="margin: 24px 0;">
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a>  
+                        <a href="#"><i class="fa fa-linkedin"></i></a>  
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                    </div>
+                    <p><button>Contact</button></p>
+                </div>
+            </div>
+        </div>
+
         <footer>
-          We really don't care about your privacy, see our <a href="privacy.html">Privacy Policy</a>
+            Thank you for visiting me website. <a href="privacy.html">Privacy Policy</a>
         </footer>
-      </div>
-</body>
-</html>
+    </body>
+</html> 
