adding more line of codes fore this project

--- a/project1/public/index.html
+++ b/project1/public/index.html
@@ -8,31 +8,32 @@
 </head>
 <body>
     <div id="homepage">
-        <header>        
-          <nav class="nav">
-          <div class="navbar">
-            <div class="subnav">
+        <header>
+            <div class="navbar">
                 <a href="index.html">
-                    <img id="logo" src="nsc/logo2.png" alt="My Dino Logo" />
+                    <img id="logo" src="/project1/public/assets/dino-logo.jpg" alt="My Dino Logo" />
                 </a>
+                <div class="dropdown">
+                  <button class="dropbtn">Menu 
+                    <i class="fa fa-caret-down"></i>
+                  </button>
+                  <div class="dropdown-content">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="register.html">Register</a>
+                  </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">External Links 
+                      <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="www.google.com">Google</a>
+                        <a href="www.wikipedia.com">Wikipedia</a>
+                        <a href="www.amazon.com">Amazon</a>
+                    </div>
+                </div>
             </div>
-            <div class="subnav">
-              <button class="subnavbtn">Menu <i class="fa fa-caret-down"></i></button>
-              <div class="subnav-content">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="register.html">Register</a>
-              </div>
-            </div>
-            <div class="subnav">
-              <button class="subnavbtn">External Links <i class="fa fa-caret-down"></i></button>
-              <div class="subnav-content">
-                <a href="www.google.com">Google</a>
-                <a href="www.wikipedia.com">Wikipedia</a>
-                <a href="www.amazon.com">Amazon</a>
-              </div>
-            </div>
-          </div>
         </header>
 
         <div class="row">
@@ -151,8 +152,10 @@
             </div>
         </div>
 
-        <footer>
-            Thank you for visiting me website. <a href="privacy.html">Privacy Policy</a>
-        </footer>
+        <div class="col-1">
+            <footer>
+                Thank you for visiting me website. <a href="privacy.html">Privacy Policy</a>
+            </footer>
+        </div>
     </body>
 </html> 
