adding more features

--- a/project1/public/index.html
+++ b/project1/public/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="navbar">
                 <a href="index.html">
-                    <img id="logo" src="/project1/public/assets/dino-logo.jpg" alt="My Dino Logo" />
+                    <img id="logo" src="assets/dino-logo.jpg" alt="My Dino Logo" />
                 </a>
                 <div class="dropdown">
                   <button class="dropbtn">Menu 
@@ -39,16 +39,9 @@
         <div class="row">
             <div class="col-3">
                 <div class="card">
-                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-                    <h1>John Doe</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>Harvard University</p>
-                    <div style="margin: 24px 0;">
-                        <a href="#"><i class="fa fa-dribbble"></i></a> 
-                        <a href="#"><i class="fa fa-twitter"></i></a>  
-                        <a href="#"><i class="fa fa-linkedin"></i></a>  
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
-                    </div>
+                    <img src="public/assets/dino-birthday.jpg" alt="Dino Birthday" style="width:10%">
+                    <h1>Dino Birthday</h1>
+                    <p>Happy Birthday Dino</p>
                     <p><button>Contact</button></p>
                 </div>
             </div>
