adding images and description

--- a/project1/public/index.html
+++ b/project1/public/index.html
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="col-3">
                 <div class="card">
-                    <img src="public/assets/dino-birthday.jpg" alt="Dino Birthday" style="width:10%">
+                    <img src="assets/dino-birthday.jpg" alt="Dino Birthday" style="width:50%">
                     <h1>Dino Birthday</h1>
                     <p>Happy Birthday Dino</p>
                     <p><button>Contact</button></p>
@@ -47,100 +47,69 @@
             </div>
 
             <div class="col-3">
-                <div class="card">
-                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-                    <h1>John Doe</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>Harvard University</p>
-                    <div style="margin: 24px 0;">
-                        <a href="#"><i class="fa fa-dribbble"></i></a> 
-                        <a href="#"><i class="fa fa-twitter"></i></a>  
-                        <a href="#"><i class="fa fa-linkedin"></i></a>  
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                <div class="col-3">
+                    <div class="card">
+                        <img src="assets/dino-brachiosauraus.jpg" alt="Brachiosauraus" style="width:100%">
+                        <h1>Brachiosauraus</h1>
+                        <p>Hello Brachio!</p>
+                        <p><button>Contact</button></p>
                     </div>
-                    <p><button>Contact</button></p>
                 </div>
             </div>
 
             <div class="col-3">
-                <div class="card">
-                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-                    <h1>John Doe</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>Harvard University</p>
-                    <div style="margin: 24px 0;">
-                        <a href="#"><i class="fa fa-dribbble"></i></a> 
-                        <a href="#"><i class="fa fa-twitter"></i></a>  
-                        <a href="#"><i class="fa fa-linkedin"></i></a>  
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                <div class="col-3">
+                    <div class="card">
+                        <img src="assets/dino-cute.jpg" alt="Cute Dinos" style="width:100%">
+                        <h1>Cute Dinos</h1>
+                        <p>Hello Cuties!</p>
+                        <p><button>Contact</button></p>
                     </div>
-                    <p><button>Contact</button></p>
                 </div>
             </div>
 
             <div class="col-3">
-                <div class="card">
-                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-                    <h1>John Doe</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>Harvard University</p>
-                    <div style="margin: 24px 0;">
-                        <a href="#"><i class="fa fa-dribbble"></i></a> 
-                        <a href="#"><i class="fa fa-twitter"></i></a>  
-                        <a href="#"><i class="fa fa-linkedin"></i></a>  
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                <div class="col-3">
+                    <div class="card">
+                        <img src="assets/dino-scary.jpg" alt="Dino Attacking" style="width:100%">
+                        <h1>Attacking Dino</h1>
+                        <p>Bring it on!</p>
+                        <p><button>Contact</button></p>
                     </div>
-                    <p><button>Contact</button></p>
                 </div>
             </div>
         </div>
         
         <div class="row">
-            <div class="col-4">
+            <div class="col-3">
                 <div class="card">
-                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-                    <h1>John Doe</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>Harvard University</p>
-                    <div style="margin: 24px 0;">
-                        <a href="#"><i class="fa fa-dribbble"></i></a> 
-                        <a href="#"><i class="fa fa-twitter"></i></a>  
-                        <a href="#"><i class="fa fa-linkedin"></i></a>  
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
-                    </div>
+                    <img src="assets/dino-skeleton.jpg" alt="Dino Skeleton" style="width:100%">
+                    <h1>Skeletons</h1>
+                    <p>Let's research on my skeleton</p>
                     <p><button>Contact</button></p>
+                </div>
+            </div>
+            </div>
+
+            <div class="col-4">
+                <div class="col-3">
+                    <div class="card">
+                        <img src="assets/dino-tail.jpg" alt="Dino Tail" style="width:100%">
+                        <h1>My Tail</h1>
+                        <p>Tails are precious</p>
+                        <p><button>Contact</button></p>
+                    </div>
                 </div>
             </div>
 
             <div class="col-4">
-                <div class="card">
-                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-                    <h1>John Doe</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>Harvard University</p>
-                    <div style="margin: 24px 0;">
-                        <a href="#"><i class="fa fa-dribbble"></i></a> 
-                        <a href="#"><i class="fa fa-twitter"></i></a>  
-                        <a href="#"><i class="fa fa-linkedin"></i></a>  
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                <div class="col-3">
+                    <div class="card">
+                        <img src="assets/diplodocus.jpg" alt="Diplodocus" style="width:100%">
+                        <h1>Diplodocus</h1>
+                        <p>I'm Diplo</p>
+                        <p><button>Contact</button></p>
                     </div>
-                    <p><button>Contact</button></p>
-                </div>
-            </div>
-
-            <div class="col-4">
-                <div class="card">
-                    <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-                    <h1>John Doe</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>Harvard University</p>
-                    <div style="margin: 24px 0;">
-                        <a href="#"><i class="fa fa-dribbble"></i></a> 
-                        <a href="#"><i class="fa fa-twitter"></i></a>  
-                        <a href="#"><i class="fa fa-linkedin"></i></a>  
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
-                    </div>
-                    <p><button>Contact</button></p>
                 </div>
             </div>
         </div>
