tidying up the cards

--- a/project1/public/index.html
+++ b/project1/public/index.html
@@ -36,81 +36,56 @@
             </div>
         </header>
 
-        <div class="row">
-            <div class="col-3">
-                <div class="card">
-                    <img src="assets/dino-birthday.jpg" alt="Dino Birthday" style="width:50%">
-                    <h1>Dino Birthday</h1>
-                    <p>Happy Birthday Dino</p>
-                    <p><button>Contact</button></p>
-                </div>
+        <div class="grid-container1">
+            <div class="card">
+                <img src="assets/dino-birthday.jpg" alt="Dino Birthday">
+                <h1>Dino Birthday</h1>
+                <p>Happy Birthday Dino</p>
+                <p><button>Celebrate my birthday!</button></p>
             </div>
 
-            <div class="col-3">
-                <div class="col-3">
-                    <div class="card">
-                        <img src="assets/dino-brachiosauraus.jpg" alt="Brachiosauraus" style="width:100%">
-                        <h1>Brachiosauraus</h1>
-                        <p>Hello Brachio!</p>
-                        <p><button>Contact</button></p>
-                    </div>
-                </div>
+            <div class="card">
+                <img src="assets/dino-brachiosauraus.jpg" alt="Brachiosauraus">
+                <h1>Brachiosauraus</h1>
+                <p>Hello Brachio!</p>
+                <p><button>Know more about me</button></p>
             </div>
 
-            <div class="col-3">
-                <div class="col-3">
-                    <div class="card">
-                        <img src="assets/dino-cute.jpg" alt="Cute Dinos" style="width:100%">
-                        <h1>Cute Dinos</h1>
-                        <p>Hello Cuties!</p>
-                        <p><button>Contact</button></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-3">
-                <div class="col-3">
-                    <div class="card">
-                        <img src="assets/dino-scary.jpg" alt="Dino Attacking" style="width:100%">
-                        <h1>Attacking Dino</h1>
-                        <p>Bring it on!</p>
-                        <p><button>Contact</button></p>
-                    </div>
-                </div>
+            <div class="card">
+                <img src="assets/dino-cute.jpg" alt="Cute Dinos">
+                <h1>Cute Dinos</h1>
+                <p>Hello Cuties!</p>
+                <p><button>See how cute I can be</button></p>
             </div>
         </div>
-        
-        <div class="row">
-            <div class="col-3">
-                <div class="card">
-                    <img src="assets/dino-skeleton.jpg" alt="Dino Skeleton" style="width:100%">
-                    <h1>Skeletons</h1>
-                    <p>Let's research on my skeleton</p>
-                    <p><button>Contact</button></p>
-                </div>
-            </div>
+
+        <div class="grid-container2">
+            <div class="card">
+                <img src="assets/dino-scary.jpg" alt="Dino Attacking">
+                <h1>Attacking Dino</h1>
+                <p>Bring it on!</p>
+                <p><button>Learn the tricks to beat me</button></p>
             </div>
 
-            <div class="col-4">
-                <div class="col-3">
-                    <div class="card">
-                        <img src="assets/dino-tail.jpg" alt="Dino Tail" style="width:100%">
-                        <h1>My Tail</h1>
-                        <p>Tails are precious</p>
-                        <p><button>Contact</button></p>
-                    </div>
-                </div>
+            <div class="card">
+                <img src="assets/dino-skeleton.jpg" alt="Dino Skeleton">
+                <h1>Skeletons</h1>
+                <p>Let's research on my skeleton</p>
+                <p><button>More history about me</button></p>
             </div>
 
-            <div class="col-4">
-                <div class="col-3">
-                    <div class="card">
-                        <img src="assets/diplodocus.jpg" alt="Diplodocus" style="width:100%">
-                        <h1>Diplodocus</h1>
-                        <p>I'm Diplo</p>
-                        <p><button>Contact</button></p>
-                    </div>
-                </div>
+            <div class="card">
+                <img src="assets/dino-tail.jpg" alt="Dino Tail">
+                <h1>My Tail</h1>
+                <p>Tails are precious</p>
+                <p><button>Kids love my tail, want to know why?</button></p>
+            </div>
+
+            <div class="card">
+                <img src="assets/diplodocus.jpg" alt="Diplodocus">
+                <h1>Diplodocus</h1>
+                <p>I'm Diplo</p>
+                <p><button>Let's explore</button></p>
             </div>
         </div>
 
