adding about page content

--- a/project1/public/about.html
+++ b/project1/public/about.html
@@ -4,8 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="./assets/index.css"/>
 </head>
 <body>
-    
-</body>
-</html>
+    <div id="about">
+        <header>
+            <div class="navbar">
+                <a href="index.html">
+                    <img id="logo" src="assets/dino-logo.jpg" alt="My Dino Logo" />
+                </a>
+                <div class="dropdown">
+                  <button class="dropbtn">Menu 
+                    <i class="fa fa-caret-down"></i>
+                  </button>
+                  <div class="dropdown-content">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="register.html">Register</a>
+                  </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">External Links 
+                      <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="www.google.com">Google</a>
+                        <a href="www.wikipedia.com">Wikipedia</a>
+                        <a href="www.amazon.com">Amazon</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <div class="grid-container3">
+            <div class="card">
+                <h3>Do any mass extinctions correlate with magnetic reversals?</h3>
+                <p>No. There is no evidence of a correlation between mass extinctions and magnetic pole reversals. Earth’s magnetic field and its atmosphere protect us from solar radiation. It’s not clear whether a weak magnetic field during a polarity transition would allow enough solar radiation to reach the Earth's surface that it would cause extinctions. But reversals happen rather frequently--every million. This Placenticeras meeki ammonite specimen from our Campanian Pueblo, Colorado Pierre Shale collection of the CRC website
+                </p>
+                <h3>Can USGS photos of fossils be downloaded or viewed online?</h3>
+                <p>Some fossil photos can be viewed and downloaded from the USGS Photographic Library and our Multimedia Gallery. Fossil photos can also be viewed as published plates within many online USGS publications. Visit the USGS Publications Warehouse to search for publications. The best keywords for searches are author names, such as William Cobban, Norm Silberling, and Glenn Scott.
+                </p>
+                <h3>Did all the dinosaurs live together, and at the same time?</h3>
+                <p>Dinosaur communities were separated by both time and geography. The 'Age of Dinosaurs' (the Mesozoic Era) included three consecutive geologic time periods (the Triassic, Jurassic, and Cretaceous Periods). Different dinosaur species lived during each of these three periods. For example, the Jurassic dinosaur Stegosaurus had already been extinct for approximately 80 million years before.
+                </p>     
+            </div>
+        </div>
+
+        <div class="col-1">
+            <footer>
+                Thank you for visiting me website. <a href="privacy.html">Privacy Policy</a>
+            </footer>
+        </div>
+    </body>
+</html> 
