--- a/project1/public/index.html
+++ b/project1/public/index.html
@@ -78,7 +78,7 @@
                 <img src="assets/dino-tail.jpg" alt="Dino Tail">
                 <h1>My Tail</h1>
                 <p>Tails are precious</p>
-                <p><button>Kids love my tail, want to know why?</button></p>
+                <p><button>Why do kids love my tail?</button></p>
             </div>
 
             <div class="card">
