adding register page and form

--- a/project1/public/about.html
+++ b/project1/public/about.html
@@ -37,7 +37,7 @@
         </header>
 
         <div class="grid-container3">
-            <div class="card">
+            <div class="card-paragraph">
                 <h3>Do any mass extinctions correlate with magnetic reversals?</h3>
                 <p>No. There is no evidence of a correlation between mass extinctions and magnetic pole reversals. Earth’s magnetic field and its atmosphere protect us from solar radiation. It’s not clear whether a weak magnetic field during a polarity transition would allow enough solar radiation to reach the Earth's surface that it would cause extinctions. But reversals happen rather frequently--every million. This Placenticeras meeki ammonite specimen from our Campanian Pueblo, Colorado Pierre Shale collection of the CRC website
                 </p>
