changing card colors

--- a/project1/public/index.html
+++ b/project1/public/index.html
@@ -37,21 +37,21 @@
         </header>
 
         <div class="grid-container1">
-            <div class="card">
+            <div class="card" id="c1">
                 <img src="assets/dino-birthday.jpg" alt="Dino Birthday">
                 <h1>Dino Birthday</h1>
                 <p>Happy Birthday Dino</p>
                 <p><button>Celebrate my birthday!</button></p>
             </div>
 
-            <div class="card">
+            <div class="card" id="c2">
                 <img src="assets/dino-brachiosauraus.jpg" alt="Brachiosauraus">
                 <h1>Brachiosauraus</h1>
                 <p>Hello Brachio!</p>
                 <p><button>Know more about me</button></p>
             </div>
 
-            <div class="card">
+            <div class="card" id="c3">
                 <img src="assets/dino-cute.jpg" alt="Cute Dinos">
                 <h1>Cute Dinos</h1>
                 <p>Hello Cuties!</p>
@@ -60,28 +60,28 @@
         </div>
 
         <div class="grid-container2">
-            <div class="card">
+            <div class="card" id="c7">
                 <img src="assets/dino-scary.jpg" alt="Dino Attacking">
                 <h1>Attacking Dino</h1>
                 <p>Bring it on!</p>
                 <p><button>Learn the tricks to beat me</button></p>
             </div>
 
-            <div class="card">
+            <div class="card" id="c4">
                 <img src="assets/dino-skeleton.jpg" alt="Dino Skeleton">
                 <h1>Skeletons</h1>
                 <p>Let's research on my skeleton</p>
                 <p><button>More history about me</button></p>
             </div>
 
-            <div class="card">
+            <div class="card" id="c5">
                 <img src="assets/dino-tail.jpg" alt="Dino Tail">
                 <h1>My Tail</h1>
                 <p>Tails are precious</p>
-                <p><button>Why do kids love my tail?</button></p>
+                <p><button>Why kids love my tail, want to know why?</button></p>
             </div>
 
-            <div class="card">
+            <div class="card" id="c6">
                 <img src="assets/diplodocus.jpg" alt="Diplodocus">
                 <h1>Diplodocus</h1>
                 <p>I'm Diplo</p>
