--- a/work/03-responsive-grid/index.html
+++ b/work/03-responsive-grid/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cats of the Internet</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/stylo.css">
 </head>
 <body>
     <header class="header">
