--- a/work/04-basic-form/public/index.html
+++ b/work/04-basic-form/public/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div id="homepage">
-        <header>        
+        <header>
+            <h1>Basic Form</h1>       
           <nav class="primary-nav">
             <ul class="menu">
               <li><a href="about.html">About</a></li>
