navbar, cards and menu options

--- a/work/06-js-intro/index.html
+++ b/work/06-js-intro/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment6-SoumyaS</title>
+    <link rel="stylesheet" href="../06-js-intro/assets/index.css">
 </head>
 <body>
-    
+    <header class="header">
+        <h1>Testing my JS Skills</h1>
+        <nav class="navbar">
+            <button id="menu-button" class="menu-button">Menu</button>
+            <ul id="dropdown-menu" class="dropdown-menu">
+                <li><a href="https://archinect.com/soumyasingh/project/ux-design-portfolio">My Story</a></li>
+                <li><a href="https://view.storydoc.com/fAj8KCyU">My Projects</a></li>
+                <li><a href="https://www.linkedin.com/in/soumyasinghso/">Stay in touch!</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="main">
+        <h2>Here are the things you could do</h2>
+        <section class="cards">
+            <article class="card">
+                <img src="../06-js-intro/assets/academic-portfolio.jpg" alt="Image 1">
+                <h3>My Academic Portolfio</h3>
+                <p>Here's everything I did in school</p>
+                <a href="https://archinect.com/soumyasingh/project/ux-design-portfolio">View Now</a>
+            </article>
+            <article class="card">
+                <img src="../06-js-intro/assets/professional-portfolio.jpg" alt="Image 2">
+                <h3>My Professional Portfolio</h3>
+                <p>Here's everything I did at work</p>
+                <a href="https://view.storydoc.com/fAj8KCyU">View Now</a>
+            </article>
+            <article class="card">
+                <img src="../06-js-intro/assets/linkedin.jpg" alt="Image 3">
+                <h3>Linkedin Info</h3>
+                <p>Stay connected</p>
+                <a href="https://www.linkedin.com/in/soumyasinghso/">LinkedIn Connect</a>
+            </article>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <p>&copy; 2025 INFO 6150 | Northeastern Univesity | NUID 002309707</p>
+    </footer>
+
+    <script src="index.js"></script>
 </body>
 </html>
