fixing css issues in the layout- making footer sticky and center aligning the main card

--- a/work/04-basic-form/public/index.html
+++ b/work/04-basic-form/public/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>Basic Form</h1>
               <main>
-                <div class="grid-container4">
+                <div class="grid-container-main">
                   <div class="card-form">
                       <h2>Welcome to the registration page</h2>
                       <form action="'/register" method="POST">
