pushing styling based on npx serve

--- a/work/06-js-intro/index.html
+++ b/work/06-js-intro/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment6-SoumyaS</title>
-    <link rel="stylesheet" href="../06-js-intro/assets/index.css">
+    <link rel="stylesheet" href="assets/index.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -23,19 +24,19 @@
         <h2>Here are the things you could do</h2>
         <section class="cards">
             <article class="card">
-                <img src="../06-js-intro/assets/academic-portfolio.jpg" alt="Image 1">
+                <img src="assets/academic-portfolio.jpg" alt="Image 1">
                 <h3>My Academic Portolfio</h3>
                 <p>Here's everything I did in school</p>
                 <a href="https://archinect.com/soumyasingh/project/ux-design-portfolio">View Now</a>
             </article>
             <article class="card">
-                <img src="../06-js-intro/assets/professional-portfolio.jpg" alt="Image 2">
+                <img src="assets/professional-portfolio.jpg" alt="Image 2">
                 <h3>My Professional Portfolio</h3>
                 <p>Here's everything I did at work</p>
                 <a href="https://view.storydoc.com/fAj8KCyU">View Now</a>
             </article>
             <article class="card">
-                <img src="../06-js-intro/assets/linkedin.jpg" alt="Image 3">
+                <img src="assets/linkedin.jpg" alt="Image 3">
                 <h3>Linkedin Info</h3>
                 <p>Stay connected</p>
                 <a href="https://www.linkedin.com/in/soumyasinghso/">LinkedIn Connect</a>
@@ -46,7 +47,5 @@
     <footer class="footer">
         <p>&copy; 2025 INFO 6150 | Northeastern Univesity | NUID 002309707</p>
     </footer>
-
-    <script src="index.js"></script>
 </body>
 </html>
