adding more features in both pages in terms of styling

--- a/project2/public/index.html
+++ b/project2/public/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
 
-    <!-- Skip Link -->
     <a href="#main-content" class="skip-link">Skip to Main Content</a>
 
-    <!-- Header -->
+
     <header class="header">
         <img src="images/logo.png" alt="Logo of a cat" class="logo">
         <h1>Cats Power the Internet</h1>
@@ -26,14 +25,14 @@
         </nav>
     </header>
 
-    <!-- Main Content -->
+
     <main id="main-content">
         <section class="content-box">
             <div class="text">
-                <h2>Long time Internet Subjects</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <p>Aliquam at aliquet purus, nec ultrices mauris.</p>
-                <p>Elit quas similique pariatur eaque adipisicing Enim delectus neque rerum.</p>
+                <h2><b>Long time Internet Subjects</b></h2>
+                <p>Adipisicing obcaecati praesentium repellendus a iusto Debitis nesciunt eius laborum nostrum illo Illo aliquid amet.</p>
+                <p>Elit necessitatibus inventore sed aliquid magnam eos, velit nisi Ea distinctio itaque suscipit animi voluptate.</p>
+                <p>Elit quas similique pariatur eaque adipisicing Enim delectus neque rerum sed nobis Dolor suscipit nulla?</p>
             </div>
             <img src="images/cats1.jpg" alt="Three kittens sitting on a basket">
         </section>
@@ -41,14 +40,15 @@
         <section class="content-box reverse">
             <img src="images/cat2.jpg" alt="Cat walking in the snow">
             <div class="text">
-                <h2>Long Time Internet Kings</h2>
-                <p>Aliquam at aliquet purus, nec ultrices mauris.</p>
-                <p>Aliquam gravida neque et velit faucibus, nec tincidunt libero pharetra.</p>
+                <h2><b>Long Time Internet Kings</b></h2>
+                <p>Elit quaerat ut quibusdam iure qui Quibusdam beatae praesentium quaerat aut labore debitis, possimus Veniam quod ab recusandae eos inventore.</p>
+                <p>Amet nisi illo unde eligendi nemo. Libero laboriosam quaerat accusamus incidunt at. Pariatur nesciunt praesentium unde dolore assumenda. Itaque officiis.</p>
+                <p>Ipsum fuga recusandae quae nesciunt nisi? Magnam maiores natus a magni iure. Tenetur error nam ab excepturi natus voluptatibus aut.</p>
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
+
     <footer class="footer">
         <nav class="footer-nav">
             <a href="#">Privacy Policy</a>
