--- a/project2/public/cats.html
+++ b/project2/public/cats.html
@@ -11,14 +11,17 @@
 
 
     <header class="header">
-        <img src="images/logo.png" alt="Logo of a cat" class="logo">
-        <h1>Famous Internet Cats</h1>
+        <div class="logo-title">
+            <img src="images/logo.jpg" alt="Logo of a cat" class="logo">
+            <h1>Famous Internet Cats</h1>
+        </div>
+        
         <nav class="nav">
             <button class="hamburger" aria-label="Toggle menu">☰</button>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cats.html">Famous Cats</a></li>
-                <li><a href="#">Cat Events</a></li>
+                <li><a href="https://www.eventbrite.com/d/canada--toronto--downsview/cat-show/">Cat Events</a></li>
             </ul>
         </nav>
     </header>
