--- a/project2/public/index.html
+++ b/project2/public/index.html
@@ -13,14 +13,17 @@
 
 
     <header class="header">
-        <img src="images/logo.png" alt="Logo of a cat" class="logo">
-        <h1>Cats Power the Internet</h1>
+        <div class="logo-title">
+            <img src="images/logo.jpg" alt="Logo of a cat" class="logo">
+            <h1>Famous Internet Cats</h1>
+        </div>
+        
         <nav class="nav">
             <button class="hamburger" aria-label="Toggle menu">☰</button>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cats.html">Famous Cats</a></li>
-                <li><a href="#">Cat Events</a></li>
+                <li><a href="https://www.eventbrite.com/d/canada--toronto--downsview/cat-show/">Cat Events</a></li>
             </ul>
         </nav>
     </header>
@@ -34,10 +37,10 @@
                 <p>Elit necessitatibus inventore sed aliquid magnam eos, velit nisi Ea distinctio itaque suscipit animi voluptate.</p>
                 <p>Elit quas similique pariatur eaque adipisicing Enim delectus neque rerum sed nobis Dolor suscipit nulla?</p>
             </div>
-            <img src="images/cats1.jpg" alt="Three kittens sitting on a basket">
+            <img src="images/cat1.jpg" alt="Three kittens sitting on a basket">
         </section>
 
-        <section class="content-box reverse">
+        <section class="content-box">
             <img src="images/cat2.jpg" alt="Cat walking in the snow">
             <div class="text">
                 <h2><b>Long Time Internet Kings</b></h2>
