--- a/final/online-grocery/index.html
+++ b/final/online-grocery/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FreshMart - Online Grocery Store</title>
+    <title>Curbside Mart - Just pickup from the curbside</title>
   </head>
   <body>
     <a href="#main" class="skiplink">Skip to content</a>
@@ -11,5 +11,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-//notes to soumya: add details here
