adding back buttons to all pages, fixing styling for sort filter

--- a/final/online-grocery/index.html
+++ b/final/online-grocery/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Curbside Mart - Just pickup from the curbside</title>
+    <title>Curbside Mart - Just pickup your grocery from the curbside</title>
   </head>
   <body>
     <a href="#main" class="skiplink">Skip to content</a>
